<resources>
    <string name="app_name">StoryAppClient</string>
    <string name="appNameLogoText">Story</string>
    <string name="appRegistrationText">Registration</string>
    <string name="appAuthorizationText">Authorization</string>
    <string name="loginAuthorizationText">Please, enter your login</string>
    <string name="passwordAuthorizationText">Please, enter your password</string>
    <string name="firstNameRegistrationText">Please, enter your first name</string>
    <string name="firstNameRegistrationEditTextHint">First name</string>
    <string name="lastNameRegistrationText">Please, enter your last name</string>
    <string name="lastNameRegistrationEditTextHint">Last name</string>
    <string name="loginRegistrationText">Please, create your login</string>
    <string name="loginAuthorizationRegistrationEditTextHint">Login</string>
    <string name="passwordRegistrationText">Please, create your password</string>
    <string name="passwordAuthorizationRegistrationEditTextHint">Password</string>
    <string name="emailRegistrationText">Please, enter your email address</string>
    <string name="emailRegistrationEditTextHint">Email</string>
    <string name="authorizationButtonText">Sign In</string>
    <string name="registrationButtonText">Register</string>
    <string name="registrationProposalText">Don\'t have an account?</string>
    <string name="authorizationProposalText">Already have an account?</string>
    <string name="registrationProposalLinkText">Register now</string>
    <string name="authorizationLinkText">Log in now</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="filterStoriesIconMenuTitle">Filter stories</string>
    <string name="addStoryIconMenuTitle">Add story</string>
    <string name="exitMainScreenTitle">Exit</string>
</resources>