<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.RegistrationFragment"
    android:background="@color/backgroundAppColor">

    <TextView
        android:id="@+id/appNameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appNameLogoText"
        android:textColor="@color/appNameLogoColor"
        android:textSize="@dimen/appNameLogoTextSize"
        android:textStyle="italic"
        android:fontFamily="@font/app_logo_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/appNameRegistrationTextMarginTop"/>

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appRegistrationText"
        android:textColor="@color/app_authorization_registration_color"
        android:textSize="@dimen/appAuthorizationRegistrationTextSize"
        android:textStyle="bold"
        android:fontFamily="@font/app_title_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameLogo"
        android:layout_marginTop="@dimen/appRegistrationTextMarginTop"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardViewRegistrationHeight"
        android:backgroundTint="@color/backgroundAppColor"
        app:cardCornerRadius="@dimen/cardViewCornerRadius"
        android:layout_marginTop="@dimen/registrationCardViewMarginTop"
        android:layout_marginHorizontal="@dimen/cardViewMarginHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView">

        <LinearLayout
            android:id="@+id/cardViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/authorization_registration_card_view_shape"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/firstNameRegistrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstNameRegistrationText"
                android:textColor="@color/white"
                android:textSize="@dimen/registrationFieldsTextViewSize"
                android:fontFamily="@font/app_fields_font"
                android:layout_marginTop="@dimen/registrationTextViewMarginTop"/>

            <EditText
                android:id="@+id/firstNameRegistrationEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registrationEditTextHeight"
                android:textColor="@color/white"
                android:hint="@string/firstNameRegistrationEditTextHint"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/registration_first_last_name_icon_edit_text_selector"
                android:paddingStart="@dimen/authorizationRegistrationEditTextPaddingStart"
                android:drawablePadding="@dimen/authorizationRegistrationEditTextDrawablePadding"
                android:background="@drawable/authorization_registration_edit_text_background"
                android:layout_marginTop="@dimen/registrationEditTextMarginTop"
                android:layout_marginHorizontal="@dimen/authorizationRegistrationEditTextMarginHorizontal"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/lastNameRegistrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastNameRegistrationText"
                android:textColor="@color/white"
                android:textSize="@dimen/registrationFieldsTextViewSize"
                android:fontFamily="@font/app_fields_font"
                android:layout_marginTop="@dimen/registrationTextViewMarginTop"/>

            <EditText
                android:id="@+id/lastNameRegistrationEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registrationEditTextHeight"
                android:textColor="@color/white"
                android:hint="@string/lastNameRegistrationEditTextHint"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/registration_first_last_name_icon_edit_text_selector"
                android:paddingStart="@dimen/authorizationRegistrationEditTextPaddingStart"
                android:drawablePadding="@dimen/authorizationRegistrationEditTextDrawablePadding"
                android:background="@drawable/authorization_registration_edit_text_background"
                android:layout_marginTop="@dimen/registrationEditTextMarginTop"
                android:layout_marginHorizontal="@dimen/authorizationRegistrationEditTextMarginHorizontal"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/loginRegistrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginRegistrationText"
                android:textColor="@color/white"
                android:textSize="@dimen/registrationFieldsTextViewSize"
                android:fontFamily="@font/app_fields_font"
                android:layout_marginTop="@dimen/registrationTextViewMarginTop"/>

            <EditText
                android:id="@+id/loginRegistrationEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registrationEditTextHeight"
                android:textColor="@color/white"
                android:hint="@string/loginAuthorizationRegistrationEditTextHint"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/login_icon_edit_text_selector"
                android:paddingStart="@dimen/authorizationRegistrationEditTextPaddingStart"
                android:drawablePadding="@dimen/authorizationRegistrationEditTextDrawablePadding"
                android:background="@drawable/authorization_registration_edit_text_background"
                android:layout_marginTop="@dimen/registrationEditTextMarginTop"
                android:layout_marginHorizontal="@dimen/authorizationRegistrationEditTextMarginHorizontal"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/passwordRegistrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordRegistrationText"
                android:textColor="@color/white"
                android:textSize="@dimen/registrationFieldsTextViewSize"
                android:fontFamily="@font/app_fields_font"
                android:layout_marginTop="@dimen/registrationTextViewMarginTop"/>

            <EditText
                android:id="@+id/passwordRegistrationEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registrationEditTextHeight"
                android:textColor="@color/white"
                android:hint="@string/passwordAuthorizationRegistrationEditTextHint"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password_icon_edit_text_selector"
                android:paddingStart="@dimen/authorizationRegistrationEditTextPaddingStart"
                android:drawablePadding="@dimen/authorizationRegistrationEditTextDrawablePadding"
                android:background="@drawable/authorization_registration_edit_text_background"
                android:layout_marginTop="@dimen/registrationEditTextMarginTop"
                android:layout_marginHorizontal="@dimen/authorizationRegistrationEditTextMarginHorizontal"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/emailRegistrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailRegistrationText"
                android:textColor="@color/white"
                android:textSize="@dimen/registrationEmailTextViewSize"
                android:fontFamily="@font/app_fields_font"
                android:layout_marginTop="@dimen/registrationTextViewMarginTop"/>

            <EditText
                android:id="@+id/emailRegistrationEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registrationEditTextHeight"
                android:textColor="@color/white"
                android:hint="@string/emailRegistrationEditTextHint"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/registration_email_icon_edit_text_selector"
                android:paddingStart="@dimen/authorizationRegistrationEditTextPaddingStart"
                android:drawablePadding="@dimen/authorizationRegistrationEditTextDrawablePadding"
                android:background="@drawable/authorization_registration_edit_text_background"
                android:layout_marginTop="@dimen/registrationEditTextMarginTop"
                android:layout_marginHorizontal="@dimen/authorizationRegistrationEditTextMarginHorizontal"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry"/>

            <android.widget.Button
                android:id="@+id/registrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_icon_button"
                android:drawablePadding="@dimen/authorizationRegistrationButtonDrawablePadding"
                android:paddingHorizontal="@dimen/authorizationRegistrationButtonPaddingHorizontal"
                android:text="@string/registrationButtonText"
                android:textSize="@dimen/authorizationRegistrationButtonTextSize"
                android:fontFamily="@font/app_title_font"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/registrationButtonMarginTop"
                app:backgroundTint="@null"
                android:background="@drawable/authorization_registration_button_background"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/authorizationProposalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorizationProposalText"
        android:textColor="@color/white"
        android:textSize="@dimen/registrationAuthorizationProposalTextViewSize"
        android:fontFamily="@font/app_fields_font"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/registrationAuthorizationProposalTextViewMarginTop"/>

    <TextView
        android:id="@+id/authorizationLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/app_fields_font"
        android:text="@string/authorizationLinkText"
        android:textColor="@color/red"
        android:textSize="@dimen/registrationAuthorizationProposalTextViewSize"
        app:layout_constraintStart_toStartOf="@+id/authorizationProposalTextView"
        app:layout_constraintEnd_toEndOf="@+id/authorizationProposalTextView"
        app:layout_constraintTop_toBottomOf="@+id/authorizationProposalTextView"
        android:layout_marginTop="@dimen/registrationAuthorizationLinkTextViewMarginTop"/>

</androidx.constraintlayout.widget.ConstraintLayout>